--- a/app/globals.css
+++ b/app/globals.css
@@ -5,6 +5,14 @@
   --foreground: #171717;
 }
 
+@theme {
+  --color-primary: hsl(180, 29%, 50%);
+  --color-neutral-100: hsl(180, 52%, 96%);
+  --color-neutral-200: hsl(180, 31%, 95%);
+  --color-neutral-300: hsl(180, 8%, 52%);
+  --color-neutral-400: hsl(180, 14%, 20%);
+}
+
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
@@ -14,7 +22,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #f0fafb;
     --foreground: #ededed;
   }
 }
@@ -23,4 +31,10 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+  font-size: 15px;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: var(--font-heading);
+  font-weight: 700;
 }
